Cranking on the fixes.  Mostly style tweaks at this point, thankfully.

--- a/about_jgc/content-contact.html
+++ b/about_jgc/content-contact.html
@@ -4,7 +4,7 @@
 
         <div class="jgc-content-feature-item-left">
 
-		<h1 class="title-page-header-big"> CONTACT US </h1><br>
+		<h1 class="title-page-header-big"> Contact Us </h1><br>
           	<h1 class="content-text-header">John W. Gardner Center for Youth and Their Communities (JGC)</h1>
 		Stanford University School of Education<br>
 		505 Lasuen Mall<br>
