--- a/about_jgc/content-directions.html
+++ b/about_jgc/content-directions.html
@@ -16,7 +16,12 @@ Stanford, CA 94305-3083<br>
 <br>
 The John W. Gardner Center is located in the Barnum Center, near the Stanford Bookstore and the School of Education.<br>
 <br>
-
+<!--
+<img class="pin" src="/images/icons/gmarker-green.jpg">Barnum Center
+<img class="pin" src="/images/icons/gmarker-light-blue.jpg">Tressider
+<img class="pin" src="/images/icons/gmarker-yellow.jpg">Parking Structure 6
+-->
+<br>
 <p>
 <iframe width="625" height="550" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;source=embed&amp;hl=en&amp;ecpose=37.42310001,-122.16521818,141.43,-38.796,71.43,0&amp;msa=0&amp;msid=200448085129146576286.00048d6dea60ec24a6ab9&amp;t=m&amp;vpsrc=6&amp;ll=37.424298,-122.167196&amp;spn=0.005964,0.00912&amp;z=16&amp;output=embed"></iframe><br /><small>View <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;source=embed&amp;hl=en&amp;ecpose=37.42310001,-122.16521818,141.43,-38.796,71.43,0&amp;msa=0&amp;msid=200448085129146576286.00048d6dea60ec24a6ab9&amp;t=m&amp;vpsrc=6&amp;ll=37.424298,-122.167196&amp;spn=0.005964,0.00912&amp;z=16" style="color:#0000FF;text-align:left">Stanford School of Education Buildings and Parking</a> in a larger map</small>
 </p>
@@ -64,10 +69,10 @@ The John W. Gardner Center is located in the Barnum Center, near the Stanford Bo
 
 <hr rule>
 <a name="By Train"></a> <h1 class="content-text-header">BY TRAIN</h1><br>
-<h1 class="content-text-header">Taking Caltrain to Stanford</h1>
-From the Palo Alto Caltrain stop, free Marguerite shuttles will take you to campus.  Take the Palm Drive shuttle (Line P) and get off at the Oval.<br>
+<h1 class="content-text-header">Taking <a class="header-link" href="www.caltrain.com">Caltrain</a> to Stanford</h1>
+From the Palo Alto Caltrain stop, free <a class="link-underlined" href="http://transportation.stanford.edu/marguerite/">Marguerite</a> shuttles will take you to campus.  Take the <a class="link-underlined" href="http://transportation.stanford.edu/marguerite/p/">Palm Drive shuttle (Line P)</a> and get off at the Oval.<br>
  <br>
-Walking to Barnum Center from the Oval<br>
+<span class="content-italic">Walking to Barnum Center from the Oval</span><br>
 <ul>
 <li>Face the Main Quad.
 <li>	Turn left and walk down Serra Mall.</li>
