--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -11,7 +11,7 @@
 <ul>
 <li><a href="csri.html">Community Schools Resource Initiative (CSRI)</a></li>
 <li><a href="cydi.html">Community Youth Development Initiative (CYDI)</a></li>
-
+<li><a href="cris.html">College Readiness Indicator Systems (CRIS)</a></li>
 
 <li><a href="mapping.html">East Palo  Alto Youth Resource Mapping</a></li>
 
@@ -33,7 +33,9 @@
     
     </div> <!--end right side box div-->
     </aside>
-          <h1 class="title-page-header-big">Leadership Development</h1>
+<h1 class="title-page-header-big">Leadership Development & Capacity Building</h1><br>
+
+          <h1 class="content-text-header">Leadership Development</h1>
 
 <p>The JGC supports leaders within school districts and local youth-serving public agencies and community  based organizations to expand their potential by working cooperatively and collaboratively toward common goals.  In this sense, leadership development involves changing the paradigm from merely individually effective leaders to those who "can work in networks of responsibility" as John W. Gardner once wrote, to improve youth outcomes across boundaries and contexts.</p>
 <br>  
@@ -48,16 +50,16 @@
 </ol> 
 <br>
 
-<h1 class="title-page-header-big">Capacity Building</h1>
+<h1 class="content-text-header">Capacity Building</h1>
 
 
 <p>JGC works with partners to develop and expand their skills and knowledge about researchable questions, data collection and interpretation, and valid and reliable indicators of positive youth development that will result in actionable findings to improve outcomes for youth.    The JGC builds capacity  through ongoing partnerships and projects that: </p>
 <br>
 <ol> 
-<li>Use data to drive action. (Youth Data Archive, College Readiness Indicator Systems)</li>
+<li>Use data to drive action. (<a href="/our_work/yda.html">Youth Data Archive</a>, <a href="/our_work/cris.html">College Readiness Indicator Systems</a>)</li>
 <li>Inquire deeply into “what works for youth” in and across settings and systems (Implementation Research)</li>
-<li>Embed youth development as a city-wide approach to create thriving environments for youth (Community Youth Development Initiative)</li>
-<li>Facilitate the creation of shared frameworks to guide planning, decision making, and ongoing capacity building (Community School Resource Initiative) </li>
+<li>Embed youth development as a city-wide approach to create thriving environments for youth (<a href="/our_work/cydi.html">CYDI</a>)</li>
+<li>Facilitate the creation of shared frameworks to guide planning, decision making, and ongoing capacity building (<a href="/our_work/csri.html">Community School Resource Initiative</a>) </li>
 </ol>
 
          </div>
