--- a/partners/content-local.html
+++ b/partners/content-local.html
@@ -279,16 +279,6 @@
 <li><a href="/our_work/cydi.html">Community Youth Development Initiative (CYDI)</a></li>
 </ul>
 <br>
-
-                                             
-<a class="header-link" href="#" target="_blank">#</a><br>
-<p>#</p>
-<br>
-<ul>
-<li><a href="/our_work/cydi.html">Community Youth Development Initiative (CYDI)</a></li>
-</ul>
-<br>
-
 <a name="N"></a>
 <a class="header-link" href=" http://www.newdayforlearning.org/" target="_blank">New Day for Learning</a><br>
 <p>New Day for Learning is not a curriculum or one-size fits all program; it's a 21st century vision for learning that builds on a foundation of core academics by leveraging community resources to incorporate strategies such as hands-on learning, working in teams and problem solving. Many programs that take place before the school day, after school and during the summer are already using these innovative learning approaches to engage students and increase their chances for success.</p>
@@ -393,6 +383,12 @@
 <li><a href="/our_work/saludamerica.html">Salud America</a></li>
 </ul>
 <br>
+<a  class="header-link" href="http://www.sancarlos.k12.ca.us/" target="_blank">San Carlos School District</a><br>
+<p>The San Carlos School District, in collaboration with involved, caring parents and community members who share a vision for engaging the whole child, will provide a personal, creative, challenging education that fosters life-long interest in learning and inspires all to strive for individual excellence as contributing members of a changing society.</p><br>
+<ul>
+<li><a href="/our_work/healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>
+</ul>
+<br>
 
 <a name="S"></a>
 <a class="header-link" href=" http://www.sff.org" target="_blank">San Francisco Foundation</a><br>
@@ -408,13 +404,6 @@
 <ul>
 <li><a href="/our_work/csri.html">Community Schools Resource Initiative (CSRI)</a></li>
 <li><a href="/our_work/research_consortium.html">San Francisco Research Consortium </a></li>
-</ul>
-<br>
-
-<a  class="header-link" href="http://www.sancarlos.k12.ca.us/" target="_blank">San Carlos School District</a><br>
-<p>The San Carlos School District, in collaboration with involved, caring parents and community members who share a vision for engaging the whole child, will provide a personal, creative, challenging education that fosters life-long interest in learning and inspires all to strive for individual excellence as contributing members of a changing society.</p><br>
-<ul>
-<li><a href="/our_work/healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>
 </ul>
 <br>
 
@@ -453,7 +442,7 @@
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.sequoiadistrict.org/" target="_blank">Sequioia Union High School District</a><br>
+<a class="header-link" href=" http://www.sequoiadistrict.org/" target="_blank">Sequoia Union High School District</a><br>
 <p>The District Office is staffed by educational leaders and professionals dedicated to providing students and parents, and faculty and staff, with programs, services, infrastructure, training and data-driven curricula to promote student engagement and success in a 21st century global society.</p>
 <br>
 <ul>
