--- a/content-footer.html
+++ b/content-footer.html
@@ -27,10 +27,10 @@
                  
                  <div class="footer">
                    <span class="left_footer_text"> 
-                   Copyright &copy 2012 John W. Gardner Center at Stanford University. All rights reserved.<br>Home page art by <a href="http://www.muralmusicarts.org">muralmusicarts.org</a>, lead artist Omar Ramirez</span> 
+                   Copyright &copy 2012 John W. Gardner Center at Stanford University. All rights reserved.</span> 
                    <ul class="piped">
                      <li class="footer"><a href="http://stanford.edu/site/terms.html" target="_blank" id="first" class="footer">Terms of use</a></li>
-                     <li class="footer"><a href="https://pgnet22.stanford.edu/giving/part/common/privacy.html" target="_blank" class="footer">Privacy policy</a></li>
+                     <li class="footer"><a href="http://adminguide.stanford.edu/63.pdf" target="_blank" class="footer">Privacy policy</a></li>
                    </ul>
                 </div>
                 </footer>
