Completed this iteration of fixes

--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -1,7 +1,7 @@
   <div id="container">
     <header>
     	<div id="navbar">
-    	  <a href="/"><img src="/images/index/JGCTopLogo.png" /></a>
+    	  <a href="/"><img src="/images/2012FebTopLogo.jpg" /></a>
 
           <script type="text/javascript" src="//www.google.com/jsapi"></script>
           <script type="text/javascript">
