--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						<ul class="news">
-              <li>January 27: Milbrey McLaughlin presents <a class="link-homepage-feature" href="http://learninginafterschool.org/howkidslearn/wp/">Conference on How Kids Learn</a></li>
+              
               <li>February 7:  Milbrey McLaughlin presents <a class="link-homepage-feature" href="http://ed.stanford.edu/events/partnering-districts-research-matters">Partnering with Districts for Research that Matters</a> </li>
+<li>March 8: Oded Gurantz presents <a class="link-homepage-feature" href="http://cepa.stanford.edu/ecology/workshops">Postsecondary Ecology Workshop 2012</a></li>
 
 
 						</ul>
