--- a/our_work/content-alt-ed.html
+++ b/our_work/content-alt-ed.html
@@ -9,13 +9,12 @@
 <aside>
 <div class="right-side-box">
 
-<h1 class="content-text-header">Publication</h1>
-<br>
+<h1 class="content-text-header">Publications</h1>
+
 <ul>
 <li>PLUS: San Jose's Successful Alternative Education Option (<a href="/resources/publications/JGC_IB_PLUSSanJoseAltEd2011.pdf"class="link-no-underline">Issue Brief</a>)</li>
-<br>
+
 <li>Intake Processes at Continuation High Schools: Shaping School Climate through Selection and Enrollment Strategies (<a href="/resources/publications/JGC_IB_IntakeContinuationHS2011.pdf"class="link-no-underline">Issue Brief</a>)</li>
-<br>
 <li>Alternative Education Options: A Descriptive Study of California Continuation High Schools (<a href="/resources/publications/JGC_IB_AltEdOptions2008.pdf"class="link-no-underline">Issue Brief</a>)</li>
 </ul>
     
@@ -26,7 +25,7 @@
 
 <br>
 
-<p>This part of a larger study of California Continuation High Schools begun 2007 . As part of this study, researchers did in-depth site visits and data analysis at 22 continuation programs in three California counties, from November 2009 to October 2010. During site visits to each school researchers interviewed student groups, teachers, counselors, and school administrators. To learn about the community and policy context, we also interviewed district and county administrators and organizations serving this population of students. 
+<p>This is part of a larger study on California Continuation High Schools begun in 2007. As part of this study, researchers did in-depth site visits and data analysis at 22 continuation programs in three California counties, from November 2009 to October 2010. During site visits to each school researchers interviewed student groups, teachers, counselors, and school administrators. To learn about the community and policy context, we also interviewed district and county administrators and organizations serving this population of students. 
 
  
 
