--- a/our_work/content-bts.html
+++ b/our_work/content-bts.html
@@ -9,7 +9,7 @@
 <aside>
     <div class="right-side-box">
 
-      <h1 class="content-text-header">Partner Organizations</h1><br>
+      <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
 <li>San Francisco Mayor's Office</li>
 <li>City College of San Francisco</li>
@@ -19,14 +19,14 @@
 <br>
 
       <h1 class="content-text-header">Publications</h1>
-<br>
+
 <ul>
 <li>Secondary to Postsecondary Transitions for Youth in San Francisco Unified School District (<a href="/resources/publications/JGC_IB_SFUSDPostSecondaryTransition2010.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_SFUSDPostSecondaryTransition2011.pdf" class="link-no-underline">Snapshot</a>)</li>
-<br>
+
 <li>Supporting the Transition to Postsecondary Education (<a href="/resources/publications/JGC_SS_SupportingTransitionPostsecondary2011.pdf" class="link-no-underline">Snapshot</a>)
-<br><br>
+
 <li>Developing Early Warning Indicators for the San Francisco Unified School District (<a href="/resources/publications/JGC_IB_SFUSDEarlyWarningIndicators2011.pdf" class="link-no-underline" target="_blank">Issue Brief </a> & <a href="/resources/publications/JGC_SS_SFUSDEarlyWarningIndicators2011.pdf" class="link-no-underline">Snapshot</a>)</li>
-<br>
+
 <li>Math Articulation Between the San Francisco Unified School District and the City College of San Francisco (<a href="/resources/publications/JGC_IB_SFUSDMathArticulation2011.pdf" class="link-no-underline" target="_blank">Issue Brief</a> & <a href="/resources/publications/JGC_SS_SFUSDMathArticulation2011.pdf"class="link-no-underline">Snapshot</a>)</li>
 </ul>
 
