--- a/our_work/content-community_schools_eval.html
+++ b/our_work/content-community_schools_eval.html
@@ -8,10 +8,10 @@
 <aside>
     <div class="right-side-box">
 
- <h1 class="content-text-header">Publication</h1><br>
+ <h1 class="content-text-header">Publication</h1>
 
 <ul>
-<li>Examining Student Outcomes Across Programs in Redwood City Community Schools (<a href="/resources/publications/CSIssueBrief.pdf">Issue Brief</a> & <a href="/resources/publications/JGC_SS_RWCCommunitySchools2011.pdf" class="link-no-underline">Snapshot</a>)</li>
+<li>Examining Student Outcomes Across Programs in Redwood City Community Schools (<a href="/resources/publications/CSIssueBrief.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_RWCCommunitySchools2011.pdf" class="link-no-underline">Snapshot</a>)</li>
 </ul>
     
     </div> <!--end right side box div-->
