--- a/our_work/content-playworks.html
+++ b/our_work/content-playworks.html
@@ -9,19 +9,19 @@
  <aside>
     <div class="right-side-box">
 
-      <h1 class="content-text-header">Partner Organizations</h1><br>
+      <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
 <li>PlayWorks</li>
 <li>Mathematica Policy Research</li>
 </ul>
     <br>
 
-      <h1 class="content-text-header">Publications</h1><br>
+      <h1 class="content-text-header">Publications</h1>
 <ul>
 <li>Playworks Implementation in Eight Bay Area Elementary Schools (<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Report</a>)</li>
-<br>
+
 <li>Playworks: Supporting Play and Physical Activity in Low-Income Elementary Schools (<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Report)</a></li>
-<br>
+
 
 <li>Child's Play: Why increasing opportunities to play and be active may improve students' academic and physical outcomes (<a href="/resources/lit-review/Lit-Review_PlayWorks_091027.pdf">Lit Review</a>)</li>
 </ul>
