--- a/our_work/content-research-topic.html
+++ b/our_work/content-research-topic.html
@@ -16,9 +16,15 @@
 <li><a href="/our_work/research_consortium.html">San Francisco Research Consortium </a></li>	
 </ul>
 <br>	
+
+<span class="content-bold">Community Level Planning</span>
+<ul>	
+<li><a href="/our_work/cydi.html">Community Youth Development Initiative</a></li>	
+</ul>
+<br>
+
 <span class="content-bold">Community Schools</span>	
 <ul>
-
 <li><a href="/our_work/community_schools_eval.html">Redwood City Community Schools Evaluation </a></li>	
 <li><a href="community_schools_qual_eval">Redwood City Community Schools Qualitative Evaluation</a></li>	
 </ul>
@@ -33,7 +39,8 @@
 <ul>
 <li><a href="/our_work/fitness_achievement.html">Physical Fitness and Academic Achievement in Redwood City</a></li>	
 <li><a href="/our_work/playworks.html">Playworks I</a></li>	
-<li><a href="/our_work/playworks.html">Playworks II Randomized Control Trial</a></li>		
+<li><a href="/our_work/playworks.html">Playworks II Randomized Control Trial</a></li>	
+<li><a href="/our_work/prevention_partnership.html">Redwood City-North Fair Oaks Prevention Partnership</a></li>	
 <li><a href="/our_work/saludamerica.html">Salud America</a></li>	
 <li><a href="/our_work/healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>	
 <li><a href="/our_work/strc.html">Sequoia High School Teen Resource Center</a></li>	
@@ -49,9 +56,10 @@
 <br>	
 <span class="content-bold">Vulnerable Youth</span>	
 <ul>
+<li><a href="/our_work/alt-ed_transitions.html">Alternative Education Transitions</a></li>
 <li><a href="/our_work/alt-ed.html">California Alternative Education Research Project</a></li>	
 <li><a href="/our_work/foster_youth.html">Educational Outcomes of Dependent Youth</a></li>	
-<li><a href="/our_work/english_learner.html">English Learner Analysis</a></li>	
+<li><a href="/our_work/english_learner.html">English Learner After School Program Participation in Redwood City</a></li>	
 <li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>	
 </ul>
 <br>	
