--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -9,8 +9,14 @@
 	<div class="column-outer">
 	<div class="column-inner-box">
 
-           <h1 class="content-text-header">A - B</h1><br>
+           <h1 class="content-text-header">A</h1><br>
+		<ul style="list-style: none;">
+		<li><a href="/our_work/alt-ed_transitions.html">Alternative Education Transitions</a></li>
+		</ul><br>
 	   <hr class="short-rule">
+
+ <h1 class="content-text-header">B</h1><br>
+   <hr class="short-rule">
 
            <h1 class="content-text-header">C</h1>
 		<ul style="list-style: none;">
@@ -27,7 +33,7 @@
 	  <h1 class="content-text-header">E</h1>
 		<ul style="list-style: none;">
 			<li><a href="ece.html">Early Childhood Education Linkages</a></li>
-			<li><a href="english_learner.html">English Learner Analysis</a></li>
+			<li><a href="english_learner.html">English Learner After School Program Participation in Redwood City</a></li>
 			<li><a href="foster_youth.html">Educational Outcomes of Dependent Youth</a></li>
 		</ul><br>
 	  <hr class="short-rule">
@@ -65,6 +71,7 @@
 		<ul style="list-style: none;">
 			<li><a href="community_schools_eval.html">Redwood City Community Schools Evaluation</a></li>
 			<li><a href="community_schools_qual_eval.html">Redwood City Community Schools Qualitative Evaluation</a></li>
+			<li><a href="/our_work/prevention_partnership.html">Redwood City-North Fair Oaks Prevention Partnership</a></li>
 		</ul><br>
 <hr class="short-rule">
            <h1 class="content-text-header">S</h1>
