--- a/our_work/content-saludamerica.html
+++ b/our_work/content-saludamerica.html
@@ -11,7 +11,7 @@ A Project of Salud America!</h1>
 <aside>
     <div class="right-side-box">
 
-      <h1 class="content-text-header">Partner Organizations</h1><br>
+      <h1 class="content-text-header">Partner Organizations</h1>
 
     <ul>
 <li>Boys and Girls Clubs of the Peninsula</li>
@@ -22,10 +22,10 @@ A Project of Salud America!</h1>
 </ul>
 <br>
 
-<h1 class="content-text-header">Publications</h1><br>
+<h1 class="content-text-header">Publications</h1>
 <ul>
 <li>Community-Based After School Programs and Youth Physical Fitness (<a href="/resources/publications/JGC_IB_AfterSchoolPhysicalFitness2011.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_AfterSchoolPhysicalFitness2011.pdf"class="link-no-underline">Snapshot</a>)</li>
-<br>
+
 
 <li>Exploring the Link between Physical Fitness and Academic Achievement (<a href="/resources/publications/JGC_IB_PhysicalFitnessAcademicAchievement2009.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_PhysicalFitnessAcademicAchievement2009.pdf" class="link-no-underline">Snapshot</a></li>
 </ul>
