--- a/our_work/content-yda.html
+++ b/our_work/content-yda.html
@@ -11,8 +11,9 @@
 
 <h1 class="content-text-header">YDA Projects</h1>
 <ul>
+<li><a href="/our_work/alt-ed_transitions.html">Alternative Education Transitions</a></li>
 <li><a href="/our_work/foster_youth.html">Educational Outcomes of Dependent Youth</a></li>
-<li><a href="/our_work/english_learner.html">English Learner Analysis</a></li>
+<li><a href="/our_work/english_learner.html">English Learner After School Program Participation in Redwood City</a></li>
 <li><a href="/our_work/fitness_achievement.html">Physical Fitness and Academic Achievement in Redwood City</a></li>
 <li><a href="/our_work/pfa.html">Preschool for All </li>
 <li><a href="/our_work/community_schools_eval.html">Redwood City Community Schools Evaluation</a></li>
