--- a/partners/content-local.html
+++ b/partners/content-local.html
@@ -438,6 +438,7 @@
 <p>The County Office of Education is an educational service agency serving all 24 school districts in San Mateo County. It provides a variety of instructional, business, and consulting services which enhance the ability of districts to provide quality education. The office serves as an intermediate link between the California Department of Education and local districts, demonstrating educational leadership in the County and State, and working with public and private agencies for the benefit of public education.</p>
 <br>
 <ul>
+<li><a href="/our_work/alt-ed_transitions.html">Alternative Education Transitions</a></li>
 <li><a href="/our_work/pfa.html">Preschool for All</a> </li>
 </ul>
 <br>
@@ -446,9 +447,10 @@
 <p>The District Office is staffed by educational leaders and professionals dedicated to providing students and parents, and faculty and staff, with programs, services, infrastructure, training and data-driven curricula to promote student engagement and success in a 21st century global society.</p>
 <br>
 <ul>
-<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+<li><a href="/our_work/alt-ed_transitions.html">Alternative Education Transitions</a></li>
 <li><a href="/our_work/healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>
 <li><a href="/our_work/strc.html">Sequoia High School Teen Resource Center</a></li>
+<li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
 </ul>
 <br>
 
@@ -510,7 +512,7 @@
 <br>
 
 
-<a class="header-link" href=" http://www.youthcommunityservice.org/" target="_blank">Youth Community Service</a><br>
+<a class="header-link" href=" http://www.youthcommunityservice.org/" target="_blank">Youth Community Service</a>
 <br>
 <p>CS programs engage youth in community service activities that promote increased awareness of the needs of their communities and the development of individual community service self-efficacy, and positive emotional and behavioral health. We actively collaborate with a number of K-12 educators and community-based organizations in northern Santa Clara and southern San Mateo Counties.</p>
 <br>
