--- a/partners/content-national.html
+++ b/partners/content-national.html
@@ -4,6 +4,7 @@
 
         <div class="jgc-content-feature-item-left">
         <h1 class="title-page-header-big">National Partners</h1>
+(JGC Project listed in bullets)<br>
 <br>
 <a href="#A" class="header-link">A</a> | <a href="#D"  class="header-link">D</a> | E - H | <a href="#I"  class="header-link">I</a> | J - L | <a href="#M"  class="header-link">M</a> | <a href="#N"  class="header-link">N</a> | O | <a href="#P"  class="header-link">P</a> | Q - R | <a href="#S"  class="header-link">S</a> | T - Z
 <br><br>
