--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -8,8 +8,14 @@
 	<div class="column-outer">
 	<div class="column-inner-box">
 
-           <h1 class="content-text-header">A - B</h1><br>
+           <h1 class="content-text-header">A</h1><br>
+		<ul style="list-style: none;">
+		<li><a href="/our_work/alt-ed_transitions.html">Alternative Education Transitions</a></li>
+		</ul><br>
 	   <hr class="short-rule">
+
+ <h1 class="content-text-header">B</h1><br>
+   <hr class="short-rule">
 
            <h1 class="content-text-header">C</h1>
 		<ul style="list-style: none;">
@@ -29,7 +35,7 @@
 			<li><a href="ece.html">Early Childhood Education Linkages</a></li>
 			<li><a href="mapping.html">East Palo  Alto Mapping Youth Resource Mapping</a></li>
 			<li><a href="youth_art_music.html">East Palo Alto Arts, Music and Cultural Center</a></li>
-			<li><a href="english_learner.html">English Learner Analysis</a></li>
+			<li><a href="english_learner.html">English Learner After School Program Participation in Redwood City</a></li>
 			<li><a href="foster_youth.html">Educational Outcomes of Dependent Youth</a></li>
 		</ul><br>
 	  <hr class="short-rule">
