--- a/our_work/content-english_learner.html
+++ b/our_work/content-english_learner.html
@@ -3,7 +3,7 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
-        <h1 class="title-page-header-big">English Learner Analysis</h1>
+        <h1 class="title-page-header-big">English Learner After School Program Participation in Redwood City </h1>
 
 <br>
 
@@ -11,14 +11,14 @@
     <div class="right-side-box">
 
       <h1 class="content-text-header">Partner Organizations</h1>
-<br>
+
 <ul>
 <li>Redwood City School District</li>
 <li>Boys & Girls Clubs of the Peninsula</li>
 </ul>
 <br>
       <h1 class="content-text-header">Publications</h1>
-<br>
+
 <ul>
 <li>Boys and Girls Club Participation and English Language Development Among English Learner Students (<a href="/resources/publications/JGC_IB_BGCELLs2009.pdf"class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_BGCELLs2009.pdf" class="link-no-underline">Snapshot</a>)</li>
 </ul>
