--- a/our_work/content-topic.html
+++ b/our_work/content-topic.html
@@ -15,6 +15,13 @@
 <li><a href="/our_work/research_consortium.html">San Francisco Research Consortium </a></li>	
 </ul>
 <br>	
+
+<span class="content-bold">Community Level Planning</span>
+<ul>	
+<li><a href="/our_work/cydi.html">Community Youth Development Initiative</a></li>	
+</ul>
+<br>
+
 <span class="content-bold">Community Schools</span>	
 <ul>
 <li><a href="/our_work/csri.html">Community Schools Resource Initiative (CSRI)</a></li>	
@@ -49,9 +56,10 @@
 <br>	
 <span class="content-bold">Vulnerable Youth</span>	
 <ul>
-<li><a href="/our_work/alt-ed.html">California Alternative Education Research Project</a></li>	
+<li><a href="/our_work/alt-ed_transitions.html">Alternative Education Transitions</a></li>
+<li><a href="/our_work/alt-ed.html">California Alternative Education Research Project</a></li>
 <li><a href="/our_work/foster_youth.html">Educational Outcomes of Dependent Youth</a></li>	
-<li><a href="/our_work/english_learner.html">English Learner Analysis</a></li>	
+<li><a href="/our_work/english_learner.html">English Learner After School Program Participation in Redwood City</a></li>	
 <li><a href="/our_work/truancy.html">Truancy and Early Chronic Absenteeism in Redwood City</a></li>	
 </ul>
 <br>	
