--- a/resources/content-conference_papers.html
+++ b/resources/content-conference_papers.html
@@ -6,7 +6,19 @@
 
 <h1 class="title-page-header-big">Conference Papers</h1>
 <br>
-<p>Kirshner, B. (March 2004). <a href="/resources/conferences/BK_Upset the setup030904.pdf"><span class="content-italic">Upset the Setup: Sociopolitical Reasoning in Urban Youth Organizations. </span></a> Paper presented at the bi-annual conference of the Society for Research on Adolescence, Baltimore, MD.</p>
+<p>Castrechini, S. (April 2011). <a href="/resources/conferences/CS Eval AERA paper final.pdf"><span class="content-italic">Service Synergy: Examining the Cumulative Effects of Community School Services.</span></a>  American Education Research Association annual meeting, April 2011, New Orleans, LA.</p> 
+<br>
+<p>Mallonee, N., Sanchez, M., and London, R. (April 2011). <a href="/resources/conferences/PreK_to_Elementary_Outcomes_for_PFA_Participants.pdf"><span class="content-italic">Pre-K to Elementary Experiences and Outcomes of Preschool For All Students in San Mateo County, CA.</span></a> American Educational Research Association Annual Meeting, April 2011, New Orleans, LA.</p>		
+<br>
+<p>Gurantz, O., and London, R. (October 2010). <a href="/resources/conferences/Gurantz_2010_APPAM_Secondary to Postsecondary Transitions for Youth in San Francisco.pdf"><span class="content-italic">Secondary to Postsecondary Transitions for Youth in San Francisco Unified School District.</span></a> Public Policy Analysis and Management Annual
+Conference, November 2010, Boston, MA.</p>
+<br>
+<p>London, R., and Gurantz, O. (March 2010). <a href="/resources/conferences/London_2010_SRA_Adolescent After School Program Participation and Physical Fitness.pdf"><span class="content-italic">Adolescent After School Program Participation and Physical Fitness.</span></a> Society for Research on Adolescence annual conference, March 2010, Philadelphia, PA.</p>	
+
+
+
+<br>
+<p>Kirshner, B. (March 2004). <a href="/resources/conferences/BK_Upset the setup030904.pdf"><span class="content-italic">Upset the Setup: Sociopolitical Reasoning in Urban Youth Organizations.</span></a> Paper presented at the bi-annual conference of the Society for Research on Adolescence, Baltimore, MD.</p>
 <br>
 <p>Kirshner, B. (November 2003). <a href="/resources/conferences/BK_Social Formation of Youth Voice111603.pdf"><span class="content-italic"> Social Formation of Youth Voice.</span></a> Paper presented at the International Conference on Civic Education Research, New Orleans, LA.</p>
 <br>
