--- a/resources/content-presentations.html
+++ b/resources/content-presentations.html
@@ -6,15 +6,15 @@
 <h1 class="title-page-header-big">Presentations</h1>
 <br>      
 
-<p><a href="/resources/presentations/CYDI 120113 CYDI Overview.ppt">Community Youth Development Initiative(CYDI): A partnership between Redwood City 2020 and The John W. Gardner Center for Youth and Their Communities at Stanford University</a>, presented by María Fernández in January 2012</p>
+<p><a href="/resources/presentations/CYDI 120113 CYDI Overview.ppt">Community Youth Development Initiative (CYDI): A partnership between Redwood City 2020 and The John W. Gardner Center for Youth and Their Communities at Stanford University</a>, presented by María Fernández in January 2012</p>
 <br>
-<p><a href="/resources/presentations/Session 3 PPT.pdf">Community School Resource Initiative, Beyond Services:
-A Whole School Strategy for Sustainability</a>, presented by Sebastian Castrechini in May 2011</p>
+<p><a href="/resources/presentations/Session 3 PPT.pdf">Community School Resource Initiative (CSRI), Beyond Services:
+A Whole School Strategy for Sustainability</a>, presented to CSRI Site Learning teams by Sebastian Castrechini in May 2011</p>
 <br>
 <p><a href="/resources/presentations/110927_BtS_SDP_presentation_FINAL_NoNotes.pptx">Bridge to Success: Using Data
-to Improve Student Success Early Predictors of High School Graduation, Postsecondary Attendance, and Postsecondary Completion</a>, presented by Oded Gurantz in September 2011</p>
+to Improve Student Success Early Predictors of High School Graduation, Postsecondary Attendance, and Postsecondary Completion</a>, presented to Harvard Strategic Data Project Team by Oded Gurantz in September 2011</p>
 <br>
-<p><a href="/resources/presentations/SUHSD board presentation Mar 2009 v3.ppt">Physical Fitness and Academic Performance Among Redwood City Youth: Is There a Link?</a>, presented by Sebastian Castrechini in March 2009</p>
+<p><a href="/resources/presentations/SUHSD board presentation Mar 2009 v3.ppt">Physical Fitness and Academic Performance Among Redwood City Youth: Is There a Link?</a>, presented to Sequoia Union High School District School Board by Sebastian Castrechini in March 2009</p>
 
 
    </div>
