--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -57,7 +57,7 @@
           <br>
 
 	 
-          <a class="header-link" href="/about_jgc/team_bios/maria.html">Mar&iacute;a Fernandez</a>
+          <a class="header-link" href="/about_jgc/team_bios/maria.html">Mar&iacute;a Fern&aacute;ndez</a>
 	  <p>Policy and Program Senior Manager</p>
 	  <p><a href="mailto:mafernandez@stanford.edu">mafernandez@stanford.edu</a></p>
           <br>
