--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -59,7 +59,7 @@
 <li>Use data to drive action. (<a href="/our_work/yda.html">Youth Data Archive</a>, <a href="/our_work/cris.html">College Readiness Indicator Systems</a>)</li>
 <li>Inquire deeply into “what works for youth” in and across settings and systems (Implementation Research)</li>
 <li>Embed youth development as a city-wide approach to create thriving environments for youth (<a href="/our_work/cydi.html">CYDI</a>)</li>
-<li>Facilitate the creation of shared frameworks to guide planning, decision making, and ongoing capacity building (<a href="/our_work/csri.html">Community School Resource Initiative</a>) </li>
+<li>Facilitate the creation of shared frameworks to guide planning, decision making, and ongoing capacity building (<a href="/our_work/cydi.html">CYDI</a>, <a href="/our_work/csri.html">Community School Resource Initiative</a>) </li>
 </ol>
 
          </div>
