--- a/our_work/content-cydi.html
+++ b/our_work/content-cydi.html
@@ -81,7 +81,8 @@
 <h1 class="content-text-header">Publications</h1>
 <ul>
 <li><a href="/our_work/cydi/CYDI 120117 Overview - January 2012.pdf">CYDI Overview</a></li>
-<li><a href="/resources/reports/E. CYDI-PP 111014 CYDI Partner Survey Report.pdf">CYDI Partner Survey Report</a></li>   
+<li><a href="/resources/reports/E. CYDI-PP 111014 CYDI Partner Survey Report.pdf">CYDI Partner Survey Report</a></li>
+<li><a href="/resources/publications/CYDI Strategic Plan - 2nd Edition.pdf">CYDI Strategic Plan</a></li>   
 </ul>
 
  </div> <!--end right side box div-->
