--- a/our_work/content-mapping.html
+++ b/our_work/content-mapping.html
@@ -22,10 +22,15 @@
 </ul>
 <br>
  <h1 class="content-text-header">Publications</h1>
-<br>
+
 <ul>
 <li>Mapping Out-of-School Time Resources for East Palo Alto and Belle Haven Youth (<a href="/resources/publications/JGC_IB_OSTResourcesEPA2010.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_OSTResourcesEPA2010.pdf" class="link-no-underline">Snapshot</a>)</li>
 <li>Youth Resource Mapping: Partnering with Service Providers and Youth to Understand the Supply and Demand for Youth Services in a Local Context (<a href="/resources/journals/Castrechini_JA_Youth Resource Mapping Partnering with Service Providers and Youth to Understand the Supply and Demand for Youth Services in a Local Context_2011_Final.pdf">Journal Article<span class="content-italic">)</a></li>
+</ul>
+<br>
+<h1 class="content-text-header">Tool</h1>
+<ul>
+<li><a href="http://jgcnet.stanford.edu/">Youth Resource Mapping Tool</a></li>
 </ul>
     </div> <!--end right side box div-->
     </aside>
@@ -35,7 +40,7 @@
  <br>
 
 Results of this project include:<br>
-<br>
+
 <ul>
 <li>     An online program mapping tool that allows users to search for programs by time, content, location, or age range;</li>
 
