--- a/partners/content-local.html
+++ b/partners/content-local.html
@@ -7,7 +7,7 @@
 <h1 class="title-page-header-big">Local Partners</h1>
 (JGC Project listed in bullets) <br>
 <br>
-<a href="#A">A</a> <a href="#B">B</a> <a href="#C">C</a> D <a href="#E">E</a> <a href="#F">F</a> G <a href="#H">H</a> <a href="#I">I</a> <a href="#J">J</a> K L M <a href="#N">N</a> O <a href="#P">P</a> Q R <a href="#S">S</a> <a href="#T">T</a> U V W X Y Z
+<a href="#A">A</a> <a href="#B">B</a> <a href="#C">C</a> D <a href="#E">E</a> <a href="#F">F</a> G <a href="#H">H</a> <a href="#I">I</a> <a href="#J">J</a> K L <a href="#M">M</a> <a href="#N">N</a> <a href="#O">O</a> <a href="#P">P</a> Q <a href="#R">R</a> <a href="#S">S</a> <a href="#T">T</a> U V W X <a href="#Y">Y</a> Z
 <br><br>
 
 <a class="header-link" href="http://www.acterra.org/">Acterra</a><br>
@@ -192,7 +192,9 @@
 <p>The Community Network for Youth Development (CNYD) has served the Bay Area for the past twelve years as a youth development intermediary organization. In this role, CNYD offers support, training and capacity building resources to youth-serving organizations and programs. CNYD strives to strengthen programs and services for youth by providing workers and organizations with a practical link to research being done in the field. CNYD also provides a forum for communication between funders and policy-makers and the people and agencies doing the daily work with young people. Finally, CNYD provides an arena for discussion and sharing among the entire youth development community so that policy decisions can be made with a wider perspective and resources can be used efficiently and wisely. </p>
 <br>
 <ul>
+<li><a href="/our_work/csri.html">Community Schools Resource Initiative (CSRI)</a></li>
 <li><a href="/our_work/cydi.html">Community Youth Development Initiative (CYDI)</a></li>
+
 </ul>
 <br>
 
@@ -237,7 +239,7 @@
 <p>Hatchuel Tabernik & Associates is a consulting company that is dedicated to cost effective, high quality services helping organizations to improve their effectiveness, expand their services, and target their resources to support and improve their communities, and create a more equitable and just society.</p>
 <br>
 <ul>
-<li><a href="/our_work/mapping.html">East Palo  Alto Youth Resource Mapping</li>
+<li><a href="/our_work/csri.html">Community Schools Resource Initiative (CSRI)  </li>
 </ul>
 <br>
                                             
@@ -279,6 +281,14 @@
 <li><a href="/our_work/cydi.html">Community Youth Development Initiative (CYDI)</a></li>
 </ul>
 <br>
+<a class="header-link" href=" http://www.muralmusicarts.org/" target="_blank">The Mural Music and Arts Project</a><br>
+<p>The mission of the Mural Music & Arts Project (MMAP) is to educate, empower and inspire youth through the arts. MMAP’s youth-development has developed a unique approach to employment, curriculum, assessment, and technology for the benefit of urban youth. </p>
+<br>
+<ul>
+<li><a href="/our_work/youth_art_music.html">East Palo Alto Arts, Music and Cultural Center</a></li>
+</ul>
+<br>
+
 <a name="N"></a>
 <a class="header-link" href=" http://www.newdayforlearning.org/" target="_blank">New Day for Learning</a><br>
 <p>New Day for Learning is not a curriculum or one-size fits all program; it's a 21st century vision for learning that builds on a foundation of core academics by leveraging community resources to incorporate strategies such as hands-on learning, working in teams and problem solving. Many programs that take place before the school day, after school and during the summer are already using these innovative learning approaches to engage students and increase their chances for success.</p>
@@ -295,7 +305,7 @@
 <li><a href="/our_work/mapping.html">East Palo  Alto Youth Resource Mapping</a></li>
 </ul>
 <br>
-
+<a name="O"></a>
 <a class="header-link" href=" http://www.kidsfirstoakland.org/" target="_blank">Oakland Kids First</a><br>
 <p>Oakland Kids First creates leadership opportunities for young people to transform their schools so all youth graduate with the skills and motivation to reach their dreams. Its innovative Culture Change strategies result in higher graduation, college attendance and retention rates, more class participation, the creation of more meaningful youth leadership opportunities, and a greater sense of connection and responsibility students have towards their peers and their education.</p>
 <br>
@@ -304,13 +314,7 @@
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.muralmusicarts.org/" target="_blank">The Mural Music and Arts Project</a><br>
-<p>The mission of the Mural Music & Arts Project (MMAP) is to educate, empower and inspire youth through the arts. MMAP’s youth-development has developed a unique approach to employment, curriculum, assessment, and technology for the benefit of urban youth. </p>
-<br>
-<ul>
-<li><a href="/our_work/youth_art_music.html">East Palo Alto Arts, Music and Cultural Center</a></li>
-</ul>
-<br>
+
 
 <a class="header-link" href=" http://www.oneepa.org/" target="_blank">One East Palo Alto</a><br>
 <p>OEPA’s mission is to develop resident leaders, broker resources and services, build the capacity of individuals and organizations, and advocate for change, leading to the improved social, physical, spiritual, educational and economic well-being of East Palo Alto (EPA), CA.</p>
@@ -337,7 +341,7 @@
 </ul>
 <br>
 
-
+<a name="R"></a>
 <a class="header-link" href="http://www.rwc2020.org/home" target="_blank">Redwood City 2020</a><br>
 <p>Redwood City 2020 (RWC 2020) brings together key public and private organizations in our community in ongoing efforts to ensure the health and success of all children, youth and families served by the Redwood City School District. Together, RWC 2020 partners identify barriers and then implement collaborative approaches that will open the doors to success.</p>
 <br>
@@ -511,7 +515,7 @@
 </ul>
 <br>
 
-
+<a name="Y"></a>
 <a class="header-link" href=" http://www.youthcommunityservice.org/" target="_blank">Youth Community Service</a>
 <br>
 <p>CS programs engage youth in community service activities that promote increased awareness of the needs of their communities and the development of individual community service self-efficacy, and positive emotional and behavioral health. We actively collaborate with a number of K-12 educators and community-based organizations in northern Santa Clara and southern San Mateo Counties.</p>
