--- a/resources/content-policy_fact_sheets.html
+++ b/resources/content-policy_fact_sheets.html
@@ -7,23 +7,30 @@
 
 <h1 class="title-page-header-big">Policy Fact Sheets</h1><br>
 
-<a href="/resources/policy_fact_sheets/Sanchez_PFS_An Initiative to Combat Childhood Obesity First Lady Obama's Let's Move! Campaign_2010_Final.pdf">An Initiative to Combat Childhood Obesity: First Lady Michelle Obama's Let's Move! Campaign</a><br>
-<br>
+
 
 <a href="/resources/policy_fact_sheets/PFS_Early_2011_07_26.pdf">Early Warning Systems: Ideas & Examples for Implementation</a></br>
 <br>
 
+<a href="/resources/policy_fact_sheets/PFS_Using_2011_07_26.pdf">Using Early Warning Systems to Predict and Prevent Dropout</a><br>
+<br>
+
     <a href="/resources/policy_fact_sheets/Sanchez_PFS_Examining Truancy and Early Chronic Absenteeism in California_2010_Final.pdf">Examining Truancy and Early Chronic Absenteeism in California</a><br>
+<br>
+
+<a href="/resources/policy_fact_sheets/Sanchez_PFS_An Initiative to Combat Childhood Obesity First Lady Obama's Let's Move! Campaign_2010_Final.pdf">An Initiative to Combat Childhood Obesity: First Lady Michelle Obama's Let's Move! Campaign</a><br>
 <br>
     <a href="/resources/policy_fact_sheets/Castrechini_PFS_Fostering Educational Success Legislation and Policies to Promote Positive Educational Experiences for California's Foster Youth_2009_Final.pdf">Fostering Educational Success: Legislation and Policies to Promote Positive Educational Experiences for California's Foster Youth</a><br>
 <br>
     <a href="/resources/policy_fact_sheets/Gurantz_PFS_Using the American Community Survey U.S. Census Data at the Community Level_2009_Final.pdf">Using the American Community Survey: U.S. Census Data at the Community Level</a><br>
 <br>
-    <a href="/resources/policy_fact_sheets/Gurantz_PFS_Understanding Obesity Statistics How Are They Measured_2008_Final.pdf">Understanding Obesity Statistics: How Are They Measured?</a><br>
-<br>
     <a href="/resources/policy_fact_sheets/Mallonee_PFS_School Accountability Are Graduation and Dropout Rates Accurate Measures of School Success_2008_Final.pdf">School Accountability: Are Graduation and Dropout Rates Accurate Measures of School Success?</a><br>
 <br>
-<a href="/resources/policy_fact_sheets/PFS_Using_2011_07_26.pdf">Using Early Warning Systems to Predict and Prevent Dropout</a>
+
+    <a href="/resources/policy_fact_sheets/Gurantz_PFS_Understanding Obesity Statistics How Are They Measured_2008_Final.pdf">Understanding Obesity Statistics: How Are They Measured?</a><br>
+<br>
+
+
 
 
 
