--- a/resources/content-tools.html
+++ b/resources/content-tools.html
@@ -6,6 +6,9 @@
 
 <h1 class="title-page-header-big">Tools and Curricula</h1>
 <br>
+<a href="http://jgcnet.stanford.edu/">Youth Resource Mapping Tool (Apr 2010)</a>
+<p>As part of the <a href="/our_work/mapping.html">East Palo Alto Mapping Youth Resource Mapping</a> project,  the JGC developed an online program mapping tool that allows users to search for programs by time, content, location, or age range.  In addition, the JGC facilitated a youth research project that introduced community members to the mapping tool and gathered feedback on how to improve usability of the tool.</p>
+<br>
 <a href="http://www.communityschools.org/resources/community_schools_evaluation_toolkit.aspx">Community Schools Evaluation Toolkit</a>
 <p>This toolkit created in collaboration with the Coalition for Community Schools is designed to help community schools evaluate their efforts so that they learn from their successes, identify current challenges, and plan future efforts. It provides a step-by-step process for planning and conducting an evaluation at your community school site(s). The toolkit is a practical, hands-on guide that makes it possible for you to improve your community school’s effectiveness and to tell your story. Equally important, it offers a menu of data collection tools (i.e. surveys, public databases) for evaluating whether and how your school is achieving results.</p>
 <br>
