--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -5,7 +5,10 @@
         <div class="jgc-content-feature-item-left">
         <h1 class="title-page-header-big">Jobs, Internships, and Volunteer Opportunities</h1>
 <br>
-Sorry, there are no open positions at this time. 
+<h1 class="content-text-header">Job Opening</h1><br>
+<a href="/about_jgc/SSRA_Job_Description_2012"><span class="content-bold">Social Science Research Associate</span></a> (Job ID: 46371)<br>
+Apply through <a href="http://jobs.stanford.edu/">http://jobs.stanford.edu/</a>
+ 
          </div>
 
         
