--- a/content-footer.html
+++ b/content-footer.html
@@ -15,7 +15,7 @@
                         <g:plusone size="medium" annotation="none"></g:plusone>
                      </li>
                      <li class="plugin">
-                       <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like href="jgc.stanford.edu" layout="standard" show_faces="false" width="450" font="" send="true" class="fb-like"></fb:like>
+                       <div class="fb-like" data-href="http://jgc.stanford.edu" data-send="true" data-width="450" data-show-faces="false"></div>
                      </li>
                    </ul>
                    <ul class="piped_right">
