--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -1,3 +1,12 @@
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) return;
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=17325526452";
+     fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+
   <div id="container">
     <header>
     	<div id="navbar">
@@ -42,13 +51,6 @@
             </li>
             <li class="current">
               <a href="/about_jgc/stanford.html">At Stanford</a>
-            </li>
-            <li class="current">
-              <a href="#ab">Stay Connected</a>
-              <ul>
-                <li class="current"><a href="http://gardnercenter.wordpress.com">JGC Blog</a></li>
-                <li><a href="http://twitter.com/gardnercenter">Follow JGC on Twitter</a></li>
-              </ul>
             </li>
             <li>
               <a href="/about_jgc/jobs.html">Jobs</a>
