--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ document.createElement("article" );
   <!--FB plugin meta info-->
   <meta property="og:title" content="John W Gardner Center for Youth, Stanford University">
   <meta property="og:type" content="non_profit">
-  <meta property="og:image" content="http://jgc.stanford.edu/images/LogoGraphic-2.png">
+  <meta property="og:image" content="http://jgc.stanford.edu/images/2012FebTopLogo.jpg">
   <meta property="og:url" content="http://jgc.stanford.edu">
   <meta property="og:site_name" content="JGC">
   <meta property="fb:admins" content="605843081" />
@@ -47,7 +47,7 @@ document.createElement("article" );
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="js/libs/jquery-1.5.1.js"></script>
+  <script src="js/libs/jquery-latest.min.js"></script>
   <script src="js/libs/hoverIntent.js"></script>
   <script src="js/libs/superfish.js"></script>
   <script type="text/javascript">
@@ -61,7 +61,6 @@ document.createElement("article" );
 </head>
 
 <body>
-
 
     <!--#include virtual="content-menu-top.html" -->
 
@@ -165,12 +164,12 @@ document.createElement("article" );
                         <g:plusone size="medium" annotation="none"></g:plusone>
                      </li>
                      <li class="plugin">
-                       <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like href="jgc.stanford.edu" layout="standard" show_faces="false" width="450" font="" send="true" class="fb-like"></fb:like>
+                       <div class="fb-like" data-href="http://jgc.stanford.edu" data-send="true" data-width="450" data-show-faces="false"></div>
                      </li>
                    </ul>
                    <ul class="piped_right">
                      <li class="footer"><a href="/about_jgc/contact.html" class="footer">Contact Us</a></li>
-                     <li class="footer"><a href="#" class="footer">Jobs</a></li>
+                     <li class="footer"><a href="/about_jgc/jobs.html" class="footer">Jobs</a></li>
                      <li class="footer"><a href="/about_jgc/mission.html" id="first" class="footer">About JGC</a></li>
                    </ul>
                  </div>
