--- a/our_work/content-topic.html
+++ b/our_work/content-topic.html
@@ -65,7 +65,7 @@
 <br>	
 <span class="content-bold">Youth Leadership and Youth-Led Research</span>	
 <ul>
-<li><a href="/our_work/mapping.html">East Palo  Alto Mapping Usability Study</a></li>	
+<li><a href="/our_work/mapping.html">East Palo  Alto Youth Resource Mapping</a></li>	
 <li><a href="/our_work/youth_art_music.html">East Palo Alto Arts, Music and Cultural Center</a></li>	
 <li><a href="/our_work/yell.html">Youth Engaged in Leadership and Learning (YELL)</a></li>	
 <li><a href="/our_work/yim.html">Youth in the Middle (YiM)</a></li>	
